# django-milk-cms

./: README.md  setup.cfg
milk/: admin.py  forms.py  models.py  serializer.py  urls.py  views.py
milk/migrations/: 0001_initial.py  0002_image.py  0003_page.py
milk/templates/milk/: base.html  create.html  images_add.html  manage.html  media.html  page.html  pages.html  pages_add.html  post.html  posts.html  posts_add.html  skeleton.html
