[metadata]
name = django-milk-cms
version = 1.0.0
description = Minimalistic CMS
long_description = file:README.md
url = https://github.com/poitch/django-milk-cms
license = BSD 2-Clause
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 3.0
    django-stdimage >= 5.1
    Markdown >= 3.2
